--- a/GithubStatus2/Base.lproj/MainMenu.xib
+++ b/GithubStatus2/Base.lproj/MainMenu.xib
@@ -34,10 +34,7 @@
                     <rect key="frame" x="21" y="82" width="200" height="42"/>
                     <subviews>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7cR-4F-085">
-                            <rect key="frame" x="-2" y="25" width="204" height="17"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="200" id="gnU-DV-JLM"/>
-                            </constraints>
+                            <rect key="frame" x="-2" y="25" width="97" height="17"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="正在获取用户名" id="5zP-WG-dOB">
                                 <font key="font" size="13" name=".PingFangSC-Regular"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -45,10 +42,7 @@
                             </textFieldCell>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sxV-fi-ByN">
-                            <rect key="frame" x="-2" y="0.0" width="204" height="17"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="200" id="92v-5t-FPg"/>
-                            </constraints>
+                            <rect key="frame" x="-2" y="0.0" width="111" height="17"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="正在获取提交次数" id="M3v-kn-0LK">
                                 <font key="font" size="13" name=".PingFangSC-Regular"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -68,22 +62,11 @@
                         <real value="3.4028234663852886e+38"/>
                     </customSpacing>
                 </stackView>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bIm-O5-Wgf">
-                    <rect key="frame" x="21" y="20" width="48" height="48"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="48" id="OjG-Ze-Mcc"/>
-                        <constraint firstAttribute="height" constant="48" id="ZvO-og-KfQ"/>
-                    </constraints>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="img" id="HbT-mv-bc0"/>
-                </imageView>
                 <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pvq-FJ-0ZF">
-                    <rect key="frame" x="99" y="18" width="122" height="50"/>
+                    <rect key="frame" x="103" y="18" width="118" height="50"/>
                     <subviews>
                         <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IKF-bu-ZYG">
-                            <rect key="frame" x="-6" y="22" width="134" height="32"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="122" id="9VM-2d-qQy"/>
-                            </constraints>
+                            <rect key="frame" x="-6" y="22" width="130" height="32"/>
                             <buttonCell key="cell" type="push" title="程序设置" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="LgW-5P-GJY">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -93,10 +76,10 @@
                             </connections>
                         </button>
                         <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HwO-Wu-geY">
-                            <rect key="frame" x="0.0" y="0.0" width="122" height="21"/>
+                            <rect key="frame" x="0.0" y="0.0" width="118" height="21"/>
                             <subviews>
                                 <button horizontalHuggingPriority="249" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="UQ1-fG-NSl">
-                                    <rect key="frame" x="-6" y="-7" width="71" height="32"/>
+                                    <rect key="frame" x="-6" y="-7" width="67" height="32"/>
                                     <buttonCell key="cell" type="push" title="刷新" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Oet-hn-Qqe">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                         <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -106,7 +89,7 @@
                                     </connections>
                                 </button>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Jgz-6X-qtQ">
-                                    <rect key="frame" x="61" y="-7" width="67" height="32"/>
+                                    <rect key="frame" x="57" y="-7" width="67" height="32"/>
                                     <buttonCell key="cell" type="push" title="退出" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="wzM-Qb-BE1">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                         <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -150,20 +133,33 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="hzr-cv-U1c">
+                    <rect key="frame" x="21" y="20" width="48" height="48"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="48" id="WOY-sz-CQL"/>
+                        <constraint firstAttribute="width" constant="48" id="sEo-js-jlP"/>
+                    </constraints>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="img" imagePosition="only" alignment="center" alternateImage="img" imageScaling="proportionallyUpOrDown" inset="2" id="WMr-pz-AJ2">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="logoClicked:" target="wvA-8C-CXD" id="bOR-G8-eyM"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
-                <constraint firstItem="bIm-O5-Wgf" firstAttribute="leading" secondItem="kgq-YW-P80" secondAttribute="leading" id="3em-pB-cBH"/>
-                <constraint firstItem="Efv-wC-Ccd" firstAttribute="leading" secondItem="bIm-O5-Wgf" secondAttribute="trailing" constant="8" id="E93-C4-nuZ"/>
                 <constraint firstItem="kgq-YW-P80" firstAttribute="centerX" secondItem="wvA-8C-CXD" secondAttribute="centerX" id="Sx8-cZ-fcg"/>
                 <constraint firstItem="Pvq-FJ-0ZF" firstAttribute="trailing" secondItem="kgq-YW-P80" secondAttribute="trailing" id="cx6-78-ltQ"/>
                 <constraint firstAttribute="bottom" secondItem="Efv-wC-Ccd" secondAttribute="bottom" constant="36" id="fvX-9c-XT3"/>
+                <constraint firstItem="hzr-cv-U1c" firstAttribute="top" secondItem="sxV-fi-ByN" secondAttribute="bottom" constant="14" id="gFA-xR-xf0"/>
                 <constraint firstItem="kgq-YW-P80" firstAttribute="top" secondItem="wvA-8C-CXD" secondAttribute="top" constant="20" id="gFf-j8-WVZ"/>
-                <constraint firstAttribute="bottom" secondItem="bIm-O5-Wgf" secondAttribute="bottom" constant="20" id="nvr-rF-t9i"/>
+                <constraint firstItem="hzr-cv-U1c" firstAttribute="leading" secondItem="kgq-YW-P80" secondAttribute="leading" id="qaJ-bG-P3r"/>
                 <constraint firstAttribute="bottom" secondItem="Pvq-FJ-0ZF" secondAttribute="bottom" constant="18" id="uAO-WK-cqv"/>
+                <constraint firstItem="Efv-wC-Ccd" firstAttribute="leading" secondItem="hzr-cv-U1c" secondAttribute="trailing" constant="8" id="vki-KQ-0Nu"/>
             </constraints>
             <connections>
                 <outlet property="countTextField" destination="sxV-fi-ByN" id="ucy-o1-1h3"/>
-                <outlet property="logoImageView" destination="bIm-O5-Wgf" id="cpE-pv-eCf"/>
                 <outlet property="popView" destination="sXb-BC-fEi" id="Fds-mF-021"/>
                 <outlet property="statusColor" destination="Efv-wC-Ccd" id="SVp-ho-V66"/>
                 <outlet property="usernameTextField" destination="7cR-4F-085" id="LGk-VL-S1B"/>
